--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ commands_pre =
 commands =
     flake8
     mypy
+    localstack-s3-pyspark configure-defaults
     py.test
 commands_post =
     docker-compose -f tests/docker-compose.yml --project-directory tests down
