--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,21 +4,21 @@ on:
     branches:
       - master
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.6, 3.7, 3.8, 3.9]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python }}
-    - name: Install
-      run: pip install -e '.[test]'
-    - name: Tox
-      run: tox -e py
+#  test:
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        python: [3.6, 3.7, 3.8, 3.9]
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Setup Python
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: ${{ matrix.python }}
+#    - name: Install
+#      run: pip install -e '.[test]'
+#    - name: Tox
+#      run: tox -e py
   distribute:
     needs: test
     runs-on: ubuntu-latest
@@ -32,5 +32,6 @@ jobs:
       run: pip install -e '.[test]'
     - name: Build and Publish
       env:
+        TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
       run: daves-dev-tools distribute --skip-existing
