--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,7 +20,7 @@ jobs:
 #    - name: Tox
 #      run: tox -e py
   distribute:
-    needs: test
+#    needs: test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
