setup.py -> setup.cfg

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-*~
-.*/**
-**/.**
-build/**
-dist/**
-venv/**
+**/*~
+**/.*
+build
+dist
+venv
 **.pyc
 **.pyo
 **.egg
 **.sqlite
 **/__pycache__
-**/.DS_Store
 *.egg-info
+**/*.egg-info
+**/*.dist-info
 pip-wheel-metadata
 !.github
 !.gitignore
 !.flake8
-!.tox
