--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -16,11 +19,12 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
     - name: Install
-      run: pip install -e '.[test]'
+      run: make
     - name: Tox
-      run: tox -e py
+      run: venv/bin/tox -p all
   distribute:
-    needs: test
+    needs:
+      - test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -29,9 +33,9 @@ jobs:
       with:
         python-version: '3.x'
     - name: Install
-      run: pip install -e '.[test]'
+      run: make
     - name: Build and Publish
       env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-      run: daves-dev-tools distribute --skip-existing
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: make distribute
