--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,39 @@
 [tox]
-envlist = py36, py37, py38, py39
+parallel_show_output = True
+envlist = py{36,37,38,39}-pytest, py3-black, py3-flake8, py3-mypy
+skip_missing_interpreters = True
+requires = 
+	pip
 
 [testenv]
-extras = test
-commands_pre =
-    docker-compose -f tests/docker-compose.yml --project-directory tests up -d
-commands =
-    flake8
-    mypy
-    localstack-s3-pyspark configure-defaults
-    py.test
-commands_post =
-    docker-compose -f tests/docker-compose.yml --project-directory tests down
+extras = all
+
+[testenv:py{36,37,38,39}-pytest]
+deps = 
+	pytest
+	-c requirements.txt
+commands = 
+	py.test
+
+[testenv:py3-black]
+deps = 
+	black
+	-c requirements.txt
+commands = 
+	black --check .
+
+[testenv:py3-flake8]
+deps = 
+	flake8
+	-c requirements.txt
+commands = 
+	flake8
+
+[testenv:py3-mypy]
+deps = 
+	mypy
+	-c requirements.txt
+commands = 
+	mypy --install-types --non-interactive
+	mypy
+
