--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = localstack-s3-pyspark
-version = 0.2.0
+version = 0.3.0
 author_email = david@belais.me
 description = A CLI to configure pyspark for use with s3 on localstack
 long_description = file: README.md
@@ -19,6 +19,8 @@ install_requires =
 
 [options.extras_require]
 boto3 = 
+	boto3
+all = 
 	boto3
 
 [options.entry_points]
