--- a/setup.cfg
+++ b/setup.cfg
@@ -13,9 +13,10 @@ python_requires = ~=3.6
 packages = find:
 include_package_data = True
 install_requires = 
+	dataclasses; python_version == "3.6"
 	localstack-client~=1.27
 	lxml~=4.6
-	pyspark
+	pyspark>=2.7
 
 [options.extras_require]
 boto3 = 
