--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 parallel_show_output = True
-envlist = py{36,37,38,39}-pytest, py3-black, py3-flake8, py3-mypy
+envlist = py{36,37,38,39}-spark2-pytest, py{36,37,38,39}-spark3-pytest, py3-black, py3-flake8, py3-mypy
 skip_missing_interpreters = True
 requires = 
 	pip
@@ -8,31 +8,45 @@ requires =
 [testenv]
 extras = all
 
-[testenv:py{36,37,38,39}-pytest]
+[testenv:py{36,37,38,39}-spark2-pytest]
 deps = 
 	pytest
-	-c requirements.txt
+	daves-dev-tools~=0.55
+	pyspark~=2.4
+commands_pre = 
+	localstack-s3-pyspark configure-defaults
 commands = 
 	py.test
+commands_post = 
+	docker-compose -f tests/docker-compose.yml --project-directory tests down
+
+[testenv:py{36,37,38,39}-spark3-pytest]
+deps = 
+	pytest
+	daves-dev-tools~=0.55
+	pyspark~=3.2
+commands_pre = 
+	localstack-s3-pyspark configure-defaults
+commands = 
+	py.test
+commands_post = 
+	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:py3-black]
 deps = 
 	black
-	-c requirements.txt
 commands = 
 	black --check .
 
 [testenv:py3-flake8]
 deps = 
 	flake8
-	-c requirements.txt
 commands = 
 	flake8
 
 [testenv:py3-mypy]
 deps = 
 	mypy
-	-c requirements.txt
 commands = 
 	mypy --install-types --non-interactive
 	mypy
