--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,8 @@ commands =
 [testenv:py3-mypy]
 deps = 
 	mypy
+	daves-dev-tools~=0.55
+	pyspark~=3.2
 commands = 
 	mypy --install-types --non-interactive
 	mypy
