--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ extras = all
 
 [testenv:py{36,37,38,39}-spark2-pytest]
 deps = 
+	docker-compose
 	pytest
 	daves-dev-tools~=0.55
 	pyspark~=2.4
@@ -20,7 +21,8 @@ commands_post =
 	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:py{36,37,38,39}-spark3-pytest]
-deps = 
+deps =
+	docker-compose
 	pytest
 	daves-dev-tools~=0.55
 	pyspark~=3.2
