--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,24 +7,24 @@ on:
     branches:
       - master
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.6, 3.7, 3.8, 3.9, "3.10"]
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python }}
-    - name: Install
-      run: make
-    - name: Tox
-      run: venv/bin/tox
+  # test:
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       python: [3.6, 3.7, 3.8, 3.9, "3.10"]
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Setup Python
+  #     uses: actions/setup-python@v2
+  #     with:
+  #       python-version: ${{ matrix.python }}
+  #   - name: Install
+  #     run: make
+  #   - name: Tox
+  #     run: venv/bin/tox
   distribute:
-    needs:
-      - test
+    # needs:
+    #   - test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
