Fix spark requirement

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ extras = all
 deps = 
 	docker-compose
 	pytest
-	daves-dev-tools~=0.55
+	daves-dev-tools
 	pyspark~=2.4
 commands_pre = 
 	localstack-s3-pyspark configure-defaults
@@ -21,10 +21,10 @@ commands_post =
 	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:py{36,37,38,39,310}-spark3-pytest]
-deps =
+deps = 
 	docker-compose
 	pytest
-	daves-dev-tools~=0.55
+	daves-dev-tools
 	pyspark~=3.2
 commands_pre = 
 	localstack-s3-pyspark configure-defaults
@@ -48,7 +48,7 @@ commands =
 [testenv:py3-mypy]
 deps = 
 	mypy
-	daves-dev-tools~=0.55
+	daves-dev-tools
 	pyspark~=3.2
 commands = 
 	mypy --install-types --non-interactive
