--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,45 @@
 appdirs==1.4.4
-attrs==21.2.0
+attrs==21.4.0
 backports.entry-points-selectable==1.1.1
+bcrypt==3.2.0
 black==21.12b0
 bleach==4.1.0
-boto3==1.20.23
-botocore==1.23.23
+boto3==1.20.30
+botocore==1.23.30
+cached-property==1.5.2
 certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
-charset-normalizer==2.0.9
+charset-normalizer==2.0.10
 click==8.0.3
 colorama==0.4.4
+cryptography==36.0.1
 dataclasses==0.8; python_version == "3.6"
-daves-dev-tools==0.55.0
+daves-dev-tools==1.4.0
 distlib==0.3.4
+distro==1.6.0
+docker-compose==1.29.2
+docker==5.0.3
+dockerpty==0.4.1
+docopt==0.6.2
 docutils==0.18.1
-filelock==3.4.0
+filelock==3.4.1
 flake8==4.0.1
 idna==3.3
 importlib-metadata
 importlib-resources
 iniconfig==1.1.1
 jmespath==0.10.0
-keyring==23.4.0
-localstack-client==1.28
-lxml==4.6.5
+jsonschema==3.2.0
+keyring==23.4.1
+localstack-client==1.29
+lxml==4.7.1
 mccabe==0.6.1
 more-itertools==8.12.0
 mypy-extensions==0.4.3
-mypy==0.910
+mypy==0.930
 packaging==21.3
+paramiko==2.9.1
 pathspec==0.9.0
 pip==21.3.1
 pkginfo==1.8.2
@@ -37,31 +48,38 @@ pluggy==1.0.0
 py4j==0.10.9.2
 py==1.11.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
-Pygments==2.10.0
+Pygments==2.11.2
+PyNaCl==1.4.0
 pyparsing==3.0.6
+pyrsistent==0.18.0
 pyspark==3.2.0
 pytest==6.2.5
 python-dateutil==2.8.2
+python-dotenv==0.19.2
+PyYAML==5.4.1
 readme-renderer==32.0
 regex==2021.11.10
 requests-toolbelt==0.9.1
-requests==2.26.0
+requests==2.27.1
 rfc3986==1.5.0
 s3transfer==0.5.0
 setuptools==59.6.0
 six==1.16.0
+texttable==1.6.4
 toml==0.10.2
 tomli-w==0.4.0
-tomli==1.2.2
-tox==3.24.4
+tomli==1.2.3
+tox==3.24.5
 tqdm==4.62.3
 twine==3.7.1
-typed-ast==1.4.3
+typed-ast==1.5.1
 typing-extensions==4.0.1
 urllib3==1.26.7
-virtualenv==20.10.0
+virtualenv==20.13.0
 wcwidth==0.2.5
 webencodings==0.5.1
-wheel==0.37.0
+websocket-client==0.59.0
+wheel==0.37.1
 zipp==3.6.0
