--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,6 @@ extras = all
 
 [testenv:py{36,37,38,39,310}-spark2-pytest]
 deps = 
-	docker-compose
 	pytest
 	daves-dev-tools
 	pyspark~=2.4
@@ -18,11 +17,10 @@ commands_pre =
 commands = 
 	py.test
 commands_post = 
-	docker-compose -f tests/docker-compose.yml --project-directory tests down
+	docker compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:py{36,37,38,39,310}-spark3-pytest]
 deps = 
-	docker-compose
 	pytest
 	daves-dev-tools
 	pyspark~=3.2
@@ -31,7 +29,7 @@ commands_pre =
 commands = 
 	py.test
 commands_post = 
-	docker-compose -f tests/docker-compose.yml --project-directory tests down
+	docker compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:py3-black]
 deps = 
