--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands_pre =
 commands = 
 	py.test
 commands_post = 
-	docker compose -f tests/docker-compose.yml --project-directory tests down
+	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:py{36,37,38,39,310}-spark3-pytest]
 deps = 
@@ -29,7 +29,7 @@ commands_pre =
 commands = 
 	py.test
 commands_post = 
-	docker compose -f tests/docker-compose.yml --project-directory tests down
+	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:py3-black]
 deps = 
