--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ dataclasses==0.8; python_version == "3.6"
 daves-dev-tools==1.4.0
 distlib==0.3.4
 distro==1.6.0
+docker
 docker-compose
-docker==5.0.3
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.18.1
