--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,8 @@ install_requires =
 	dataclasses; python_version == "3.6"
 	localstack-client~=1.29
 	lxml~=4.7
-	pyspark>=2.4
+	pyspark>=2.4; python_version <= "3.7"
+	pyspark>=2.4,!=2.4.7,!=2.4.8; python_version > "3.7"
 
 [options.extras_require]
 boto3 = 
