--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -29,7 +29,7 @@ jobs:
     - name: install
       run: pip3 install --upgrade pip tox -r requirements.txt -e .
     - name: test
-      run: tox -p all
+      run: tox -r
   distribute:
     if: github.ref == 'refs/heads/master'
     needs:
