--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37,38,39,310}-spark2-pytest, py{36,37,38,39,310}-spark3-pytest, py3-black, py3-flake8, py3-mypy
+envlist = spark2-pytest, spark3-pytest, black, flake8, mypy
 skip_missing_interpreters = True
 requires = 
 	pip
@@ -7,7 +7,7 @@ requires =
 [testenv]
 extras = all
 
-[testenv:py{36,37,38,39,310}-spark2-pytest]
+[testenv:spark2-pytest]
 deps = 
 	daves-dev-tools
 	pytest
@@ -20,7 +20,7 @@ commands =
 commands_post = 
 	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
-[testenv:py{36,37,38,39,310}-spark3-pytest]
+[testenv:spark3-pytest]
 deps = 
 	docker-compose
 	pytest
@@ -33,19 +33,19 @@ commands =
 commands_post = 
 	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
-[testenv:py3-black]
+[testenv:black]
 deps = 
 	black
 commands = 
 	black --check .
 
-[testenv:py3-flake8]
+[testenv:flake8]
 deps = 
 	flake8
 commands = 
 	flake8
 
-[testenv:py3-mypy]
+[testenv:mypy]
 deps = 
 	mypy
 	daves-dev-tools
