--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
     - name: install
-      run: pip3 install --upgrade pip tox -r requirements.txt -e .
+      run: pip3 install --upgrade pip tox docker-compose -r requirements.txt -e .
     - name: test
       run: tox
   distribute:
