--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        - windows-latest
+        # - windows-latest
         python:
         - 3.6
         - 3.7
