--- a/setup.cfg
+++ b/setup.cfg
@@ -12,23 +12,22 @@ url = https://github.com/enorganic/localstack-s3-pyspark
 python_requires = ~=3.6
 packages = find:
 include_package_data = True
-install_requires = 
+install_requires =
 	dataclasses; python_version == "3.6"
-	localstack-client~=1.29
-	lxml~=4.7
-	pyspark>=2.4,!=2.4.7,!=2.4.8
+	localstack-client~=1.35
+	lxml~=4.9
+	pyspark!=2.4.7,!=2.4.8,>=2.4
 
 [options.extras_require]
-boto3 = 
+boto3 =
 	boto3
-all = 
+all =
 	boto3
 
 [options.entry_points]
-console_scripts = 
+console_scripts =
 	localstack-s3-pyspark = localstack_s3_pyspark.__main__:main
 
 [options.data_files]
-localstack_s3_pyspark = 
+localstack_s3_pyspark =
 	localstack_s3_pyspark/py.typed
-
