--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ install_requires =
 	dataclasses; python_version == "3.6"
 	localstack-client~=1.35
 	lxml~=4.9
-	pyspark>=2.4,!=2.4.7,!=2.4.8
+	pyspark!=2.4.7,!=2.4.8,>=2.4
 
 [options.extras_require]
 boto3 =
