--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches:
     - '*'
-jobs:
+jobs: 
   test:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -22,7 +22,11 @@ jobs:
         - 3.9
         - '3.10'
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'correto'
+        java-version: '11'
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
@@ -37,7 +41,11 @@ jobs:
       - test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'correto'
+        java-version: '11'
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
