--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: 'correto'
+        distribution: 'corretto'
         java-version: '11'
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -44,7 +44,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
-        distribution: 'correto'
+        distribution: 'corretto'
         java-version: '11'
     - name: Setup Python
       uses: actions/setup-python@v2
