--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ extras = all
 
 [testenv:spark2-pytest]
 deps =
+	docker-compose
 	pytest
 	daves-dev-tools
 	pyspark~=2.4
@@ -17,10 +18,11 @@ commands_pre =
 commands =
 	py.test
 commands_post =
-	docker compose -f tests/docker-compose.yml --project-directory tests down
+	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:spark3-pytest]
 deps =
+	docker-compose
 	pytest
 	daves-dev-tools
 	pyspark~=3.1
@@ -29,7 +31,7 @@ commands_pre =
 commands =
 	py.test
 commands_post =
-	docker compose -f tests/docker-compose.yml --project-directory tests down
+	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:black]
 deps =
