--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -22,13 +22,16 @@ jobs:
         - 3.9
         - '3.10'
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+    - uses: actions/checkout@main
+    - uses: actions/setup-java@main
       with:
         distribution: 'corretto'
         java-version: '11'
-    - name: Setup Python
-      uses: actions/setup-python@v2
+    - uses: docker-practice/actions-setup-docker@master
+      with:
+        docker_version: latest
+        docker_channel: stable
+    - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python }}
     - name: install
@@ -41,13 +44,16 @@ jobs:
       - test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
+    - uses: actions/checkout@main
+    - uses: actions/setup-java@main
       with:
         distribution: 'corretto'
         java-version: '11'
-    - name: Setup Python
-      uses: actions/setup-python@v2
+    - uses: docker-practice/actions-setup-docker@master
+      with:
+        docker_version: latest
+        docker_channel: stable
+    - uses: actions/setup-python@main
       with:
         python-version: '3.x'
     - name: install
