--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 attrs==21.4.0
+bcrypt==3.2.2
 black==22.3.0
 bleach==4.1.0
 boto3==1.23.10
 botocore==1.26.10
+cached-property==1.5.2
 certifi==2022.6.15
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
 colorama==0.4.5
+cryptography==37.0.2
 dataclasses==0.8; python_version == "3.6"
 daves-dev-tools==1.26.0
 distlib==0.3.4
+distro==1.7.0
+docker-compose==1.29.2
+docker==5.0.3
+dockerpty==0.4.1
+docopt==0.6.2
 docutils==0.18.1
 filelock
 flake8==4.0.1
@@ -18,6 +27,7 @@ importlib-metadata
 importlib-resources
 iniconfig==1.1.1
 jmespath==0.10.0
+jsonschema==3.2.0
 keyring==23.4.1
 localstack-client==1.35
 lxml==4.9.0
@@ -26,6 +36,7 @@ more-itertools==8.13.0
 mypy-extensions==0.4.3
 mypy==0.961
 packaging==21.3
+paramiko==2.11.0
 pathspec==0.9.0
 pip==21.3.1
 pkginfo==1.8.3
@@ -34,12 +45,17 @@ pluggy==1.0.0
 py4j==0.10.9.3
 py==1.11.0
 pycodestyle==2.8.0
+pycparser==2.21
 pyflakes==2.4.0
 Pygments==2.12.0
+PyNaCl==1.5.0
 pyparsing==3.0.9
+pyrsistent==0.18.0
 pyspark==3.2.1
 pytest==7.0.1
 python-dateutil==2.8.2
+python-dotenv==0.20.0
+PyYAML==5.4.1
 readme-renderer==34.0
 requests-toolbelt==0.9.1
 requests==2.27.1
@@ -47,6 +63,7 @@ rfc3986==1.5.0
 s3transfer==0.5.2
 setuptools
 six==1.16.0
+texttable==1.6.4
 toml==0.10.2
 tomli-w==0.4.0
 tomli==1.2.3
@@ -58,5 +75,6 @@ typing-extensions==4.1.1
 urllib3==1.26.9
 virtualenv==20.14.1
 webencodings==0.5.1
+websocket-client==0.59.0
 wheel==0.37.1
 zipp==3.6.0
