--- a/tox.ini
+++ b/tox.ini
@@ -9,27 +9,23 @@ extras = all
 
 [testenv:spark2-pytest]
 deps =
+	localstack
 	pytest
-	daves-dev-tools
 	pyspark~=2.4
 commands_pre =
 	localstack-s3-pyspark configure-defaults
 commands =
 	py.test
-commands_post =
-	docker compose -f tests/docker compose.yml --project-directory tests down
 
 [testenv:spark3-pytest]
 deps =
+	localstack
 	pytest
-	daves-dev-tools
 	pyspark~=3.1
 commands_pre =
 	localstack-s3-pyspark configure-defaults
 commands =
 	py.test
-commands_post =
-	docker compose -f tests/docker compose.yml --project-directory tests down
 
 [testenv:black]
 deps =
@@ -46,7 +42,6 @@ commands =
 [testenv:mypy]
 deps =
 	mypy
-	daves-dev-tools
 	pyspark~=3.1
 commands =
 	mypy --install-types --non-interactive
