--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,90 @@
-apispec==5.2.2
-attrs==21.4.0
-black==22.6.0
-bleach==5.0.1
-boto3==1.24.21
-botocore==1.27.21
-cachetools==3.1.1
-certifi==2022.6.15
-cffi==1.15.1
-chardet==4.0.0
-click==8.1.3
-colorama==0.4.5
-commonmark==0.9.1
-cryptography==37.0.2
-daves-dev-tools==1.26.0
-deepdiff==5.8.1
-dill==0.3.2
-distlib==0.3.4
-dnslib==0.9.19
-dnspython==2.2.1
-docutils==0.18.1
-ecdsa==0.17.0
+apispec
+attrs
+black
+bleach
+boto3
+botocore
+cachetools
+certifi
+cffi
+chardet
+click
+colorama
+commonmark
+cryptography
+dataclasses
+daves-dev-tools
+deepdiff
+dill
+distlib
+dnslib
+dnspython
+docutils
+ecdsa
 filelock
-flake8==4.0.1
-idna==2.10
+flake8
+idna
 importlib-metadata
-iniconfig==1.1.1
-jmespath==1.0.1
-keyring==23.6.0
-localstack-client==1.35
-localstack-ext==0.14.4
-localstack==0.14.4
-lxml==4.9.0
-mccabe==0.6.1
-more-itertools==8.13.0
-mypy-extensions==0.4.3
-mypy==0.961
-ordered-set==4.1.0
-packaging==21.3
-pathspec==0.9.0
-pbr==5.9.0
-pip==22.1.2
-pkginfo==1.8.3
+importlib-resources
+iniconfig
+jmespath
+keyring
+localstack
+localstack-client
+localstack-ext
+lxml
+mccabe
+more-itertools
+mypy
+mypy-extensions
+ordered-set
+packaging
+pathspec
+pbr
+pip
+pkginfo
 platformdirs
-pluggy==1.0.0
-plux==1.3.1
-psutil==5.9.1
-py4j==0.10.9.5
-py==1.11.0
-pyaes==1.6.1
-pyasn1==0.4.8
-pycodestyle==2.8.0
-pycparser==2.21
-pyflakes==2.4.0
-Pygments==2.12.0
-pyparsing==3.0.9
-pyspark==3.3.0
-pytest==7.1.2
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-python-jose==3.3.0
-PyYAML==6.0
-readme-renderer==35.0
-requests-toolbelt==0.9.1
-requests==2.25.1
-rfc3986==2.0.0
-rich==12.4.4
-rsa==4.8
-s3transfer==0.6.0
-semver==2.13.0
+pluggy
+plux
+psutil
+py
+py4j
+pyaes
+pyasn1
+pycodestyle
+pycparser
+pyflakes
+pygments
+pyparsing
+pyspark
+pytest
+python-dateutil
+python-dotenv
+python-jose
+pyyaml
+readme-renderer
+requests
+requests-toolbelt
+rfc3986
+rich
+rsa
+s3transfer
+semver
 setuptools
-six==1.16.0
-stevedore==3.5.0
-tabulate==0.8.10
-tailer==0.4.1
-toml==0.10.2
-tomli-w==0.4.0
-tomli==1.2.3
-tox==3.25.1
-tqdm==4.64.0
-twine==3.8.0
-typing-extensions==4.2.0
-urllib3==1.26.9
-virtualenv==20.15.1
-webencodings==0.5.1
-wheel==0.37.1
-zipp==3.8.0
+six
+stevedore
+tabulate
+tailer
+toml
+tomli
+tomli-w
+tox
+tqdm
+twine
+typed-ast
+typing-extensions
+urllib3
+virtualenv
+webencodings
+wheel
+zipp
