--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 install_command =
-	python3 -m pip install -c requirements.txt {opts} {packages} --ignore-requires-python
+	python3 -m pip install -c requirements.txt {opts} {packages}
 envlist = spark2-pytest, spark3-pytest, black, flake8, mypy
 skip_missing_interpreters = True
 requires =
