--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ extras = all
 
 [testenv:spark2-pytest]
 deps =
-	localstack
+	localstack!=0.14.4
 	pytest
 	pyspark~=2.4
 commands_pre =
@@ -16,7 +16,7 @@ commands =
 
 [testenv:spark3-pytest]
 deps =
-	localstack
+	localstack!=0.14.4
 	pytest
 	pyspark~=3.1
 commands_pre =
