--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@ extras = all
 
 [testenv:spark2-pytest]
 deps =
-	localstack!=0.14.4
+	localstack<0.14.3.4; python_version == "3.6"
+	localstack; python_version > "3.6"
 	pytest
 	pyspark~=2.4
 commands_pre =
@@ -16,7 +17,8 @@ commands =
 
 [testenv:spark3-pytest]
 deps =
-	localstack!=0.14.4
+	localstack<0.14.3.4; python_version == "3.6"
+	localstack; python_version > "3.6"
 	pytest
 	pyspark~=3.1
 commands_pre =
