--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist = spark2-pytest, spark3-pytest, black, flake8, mypy
 
 [testenv]
 extras = all
+setenv =
+	PYTHONIOENCODING=utf-8
 
 [testenv:spark2-pytest]
 deps =
