--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -14,7 +14,7 @@ jobs:
         os:
         - ubuntu-latest
         - windows-latest
-        # - macos-latest
+        - macos-latest
         python:
         - 3.6
         - 3.7
