--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -23,10 +23,10 @@ jobs:
         - '3.10'
     steps:
     - uses: actions/checkout@main
-    - uses: actions/setup-java@main
-      with:
-        distribution: 'corretto'
-        java-version: '11'
+    # - uses: actions/setup-java@main
+    #   with:
+    #     distribution: 'corretto'
+    #     java-version: '11'
     - uses: actions/setup-python@main
       with:
         python-version: ${{ matrix.python }}
