--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,13 @@ envlist = spark2-pytest, spark3-pytest, black, flake8, mypy
 
 [testenv]
 extras = all
+passenv =
+	HADOOP_HOME
+	LOCALSTACK_HOSTNAME
+	SPARK_LOCAL_IP
 setenv =
 	PYTHONIOENCODING=utf-8
+	OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
 [testenv:spark2-pytest]
 deps =
