--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ setenv =
 
 [testenv:spark2-pytest]
 deps =
-	localstack<0.14.3.4; python_version == "3.6"
-	localstack; python_version > "3.6"
+	localstack<0.14.3.4; python_version < "3.8"
+	localstack; python_version >= "3.8"
 	pytest
 	pyspark~=2.4
 commands_pre =
