--- a/tox.ini
+++ b/tox.ini
@@ -24,8 +24,8 @@ commands =
 
 [testenv:spark3-pytest]
 deps =
-	localstack<0.14.3.4; python_version == "3.6"
-	localstack; python_version > "3.6"
+	localstack<0.14.3.4; python_version < "3.8"
+	localstack; python_version >= "3.8"
 	pytest
 	pyspark~=3.1
 commands_pre =
