Dependabot/pip/paramiko 2.10.1 (#2)
* Bump paramiko from 2.9.1 to 2.10.1

Bumps [paramiko](https://github.com/paramiko/paramiko) from 2.9.1 to 2.10.1.
- [Release notes](https://github.com/paramiko/paramiko/releases)
- [Changelog](https://github.com/paramiko/paramiko/blob/main/NEWS)
- [Commits](https://github.com/paramiko/paramiko/compare/2.9.1...2.10.1)

---
updated-dependencies:
- dependency-name: paramiko
  dependency-type: direct:production
...

Signed-off-by: dependabot[bot] <support@github.com>

* *

* *

* *

* *

* CI Fix

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

* *

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -1,4 +1,4 @@
-name: test-distribute
+name: CI
 on:
   push:
     branches:
@@ -14,6 +14,7 @@ jobs:
         os:
         - ubuntu-latest
         # - windows-latest
+        # - macos-latest
         python:
         - 3.6
         - 3.7
@@ -21,30 +22,37 @@ jobs:
         - 3.9
         - '3.10'
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@main
+    # - uses: actions/setup-java@main
+    #   with:
+    #     distribution: 'corretto'
+    #     java-version: '11'
+    - uses: actions/setup-python@main
       with:
         python-version: ${{ matrix.python }}
     - name: install
-      run: pip3 install --upgrade pip tox docker-compose -r requirements.txt -e .
+      run: make
     - name: test
-      run: tox
+      run: make test
   distribute:
     if: github.ref == 'refs/heads/master'
     needs:
       - test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@main
+    # - uses: actions/setup-java@main
+    #   with:
+    #     distribution: 'corretto'
+    #     java-version: '11'
+    - uses: actions/setup-python@main
       with:
         python-version: '3.x'
     - name: install
-      run: pip3 install --upgrade pip tox -r requirements.txt -e .
+      run: make
     - name: distribute
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: daves-dev-tools distribute --skip-existing
+      run: make distribute
+
