--- a/tox.ini
+++ b/tox.ini
@@ -1,56 +1,54 @@
 [tox]
 envlist = spark2-pytest, spark3-pytest, black, flake8, mypy
-skip_missing_interpreters = True
-requires = 
-	pip
 
 [testenv]
 extras = all
+passenv =
+	HADOOP_HOME
+	LOCALSTACK_HOSTNAME
+	SPARK_LOCAL_IP
+setenv =
+	PYTHONIOENCODING=utf-8
+	OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
 [testenv:spark2-pytest]
-deps = 
-	docker-compose
+deps =
+	localstack<0.14.3.4; python_version < "3.8"
+	localstack; python_version >= "3.8"
 	pytest
-	daves-dev-tools
 	pyspark~=2.4
-commands_pre = 
+commands_pre =
 	localstack-s3-pyspark configure-defaults
-commands = 
+commands =
 	py.test
-commands_post = 
-	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:spark3-pytest]
-deps = 
-	docker-compose
+deps =
+	localstack<0.14.3.4; python_version < "3.8"
+	localstack; python_version >= "3.8"
 	pytest
-	daves-dev-tools
-	pyspark~=3.2
-commands_pre = 
+	pyspark~=3.1
+commands_pre =
 	localstack-s3-pyspark configure-defaults
-commands = 
+commands =
 	py.test
-commands_post = 
-	docker-compose -f tests/docker-compose.yml --project-directory tests down
 
 [testenv:black]
-deps = 
+deps =
 	black
-commands = 
+commands =
 	black --check .
 
 [testenv:flake8]
-deps = 
+deps =
 	flake8
-commands = 
+commands =
 	flake8
 
 [testenv:mypy]
-deps = 
+deps =
 	mypy
-	daves-dev-tools
-	pyspark~=3.2
-commands = 
+	pyspark~=3.1
+commands =
 	mypy --install-types --non-interactive
 	mypy
-
