--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,88 @@
+apispec==5.1.1
 attrs==21.4.0
-bcrypt==3.2.0
-black==21.12b0
+black==22.6.0
 bleach==4.1.0
-boto3==1.20.30
-botocore==1.23.30
-cached-property==1.5.2
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.10
-click==8.0.3
-colorama==0.4.4
-cryptography==36.0.1
+boto3==1.23.10
+botocore==1.26.10
+cachetools==3.1.1
+certifi==2022.6.15
+cffi==1.15.1
+chardet==4.0.0
+click==8.0.4
+colorama==0.4.5
+commonmark==0.9.1
+cryptography==37.0.2
 dataclasses==0.8; python_version == "3.6"
-daves-dev-tools==1.4.0
+daves-dev-tools==1.27.0
+deepdiff==5.7.0
+dill==0.3.2
 distlib==0.3.4
-distro==1.6.0
-docker
-docker-compose
-dockerpty
-docopt==0.6.2
+dnslib==0.9.19
+dnspython==2.2.1
 docutils==0.18.1
-filelock==3.4.1
+ecdsa==0.17.0
+filelock
 flake8==4.0.1
-idna==3.3
+idna==2.10
 importlib-metadata
 importlib-resources
 iniconfig==1.1.1
 jmespath==0.10.0
-jsonschema==3.2.0
 keyring==23.4.1
-localstack-client==1.29
+localstack-client==1.35
+localstack-ext==0.14.4
+localstack==0.14.3.3
 lxml==4.9.1
 mccabe==0.6.1
-more-itertools==8.12.0
+more-itertools==8.13.0
 mypy-extensions==0.4.3
-mypy==0.930
+mypy==0.961
+ordered-set==4.0.2
 packaging==21.3
-paramiko==2.9.1
 pathspec==0.9.0
-pip==21.3.1
-pkginfo==1.8.2
-platformdirs==2.4.0
+pbr==5.9.0
+pkginfo==1.8.3
+platformdirs
 pluggy==1.0.0
-py4j==0.10.9.2
+plux==1.3.1
+psutil==5.9.1
+py4j==0.10.9.3
 py==1.11.0
+pyaes==1.6.1
+pyasn1==0.4.8
 pycodestyle==2.8.0
 pycparser==2.21
 pyflakes==2.4.0
-Pygments==2.11.2
-PyNaCl==1.4.0
-pyparsing==3.0.6
-pyrsistent==0.18.0
-pyspark==3.2.0
-pytest==6.2.5
+Pygments==2.12.0
+pyparsing==3.0.9
+pyspark==3.2.1
+pytest==7.0.1
 python-dateutil==2.8.2
-python-dotenv==0.19.2
-PyYAML==5.4.1
-readme-renderer==32.0
+python-dotenv==0.20.0
+python-jose==3.3.0
+PyYAML==6.0
+readme-renderer==34.0
 requests-toolbelt==0.9.1
-requests==2.27.1
+requests==2.25.1
 rfc3986==1.5.0
-s3transfer==0.5.0
-setuptools==59.6.0
+rich==12.4.4
+rsa==4.8
+s3transfer==0.5.2
+semver==2.13.0
+setuptools
 six==1.16.0
-texttable==1.6.4
+stevedore==3.5.0
+tabulate==0.8.10
+tailer==0.4.1
 toml==0.10.2
 tomli-w==0.4.0
 tomli==1.2.3
-tox==3.24.5
-tqdm==4.62.3
-twine==3.7.1
-typed-ast==1.5.1
-typing-extensions==4.0.1
-urllib3==1.26.7
-virtualenv==20.13.0
+tox==3.25.1
+tqdm==4.64.0
+twine==3.8.0
+typed-ast==1.5.4
+typing-extensions==4.1.1
+urllib3==1.26.9
+virtualenv==20.15.1
 webencodings==0.5.1
-websocket-client==0.59.0
-wheel==0.37.1
 zipp==3.6.0
