--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,47 @@
-apispec==5.1.1
+apispec==5.2.2
 attrs==22.1.0
-black==22.6.0
-bleach==4.1.0
-boto3==1.23.10
-botocore==1.26.10
-cachetools==3.1.1
+black==22.8.0
+bleach==5.0.1
+boto3==1.24.68
+botocore==1.27.68
+cachetools==5.0.0
 certifi==2022.6.15
 cffi==1.15.1
 chardet==4.0.0
-click==8.0.4
-colorama==0.4.5
+click==8.1.3
 commonmark==0.9.1
-cryptography==37.0.4
-dataclasses==0.8; python_version == "3.6"
-daves-dev-tools==1.39.0
-deepdiff==5.7.0
+cryptography==38.0.1
+daves-dev-tools==1.39.1
 dill==0.3.2
 distlib==0.3.6
 dnslib==0.9.20
 dnspython==2.2.1
-docutils==0.18.1
+docutils==0.19
 ecdsa==0.18.0
 filelock
 flake8==5.0.4
 idna==2.10
 importlib-metadata
-importlib-resources
 iniconfig==1.1.1
-jmespath==0.10.0
-keyring==23.4.1
-localstack-client==1.36
-localstack-ext==0.14.5
-localstack==0.14.5
+jaraco.classes==3.2.2
+jmespath==1.0.1
+keyring==23.9.1
+localstack-client==1.39
+localstack-ext==1.1.0
+localstack==1.1.0
 lxml==4.9.1
 mccabe==0.7.0
 more-itertools==8.14.0
 mypy-extensions==0.4.3
 mypy==0.971
-ordered-set==4.0.2
 packaging==21.3
-pathspec==0.9.0
+pathspec==0.10.1
 pbr==5.10.0
 pkginfo==1.8.3
 platformdirs
 pluggy==1.0.0
 plux==1.3.1
-psutil==5.9.1
+psutil==5.9.2
 py4j==0.10.9.5
 py==1.11.0
 pyaes==1.6.1
@@ -55,19 +51,19 @@ pycparser==2.21
 pyflakes==2.5.0
 Pygments==2.13.0
 pyparsing==3.0.9
-pyspark==3.2.2
-pytest==7.0.1
+pyspark==3.3.0
+pytest==7.1.3
 python-dateutil==2.8.2
-python-dotenv==0.20.0
+python-dotenv==0.21.0
 python-jose==3.3.0
 PyYAML==6.0
-readme-renderer==34.0
+readme-renderer==37.1
 requests-toolbelt==0.9.1
 requests==2.25.1
-rfc3986==1.5.0
+rfc3986==2.0.0
 rich==12.5.1
 rsa==4.9
-s3transfer==0.5.2
+s3transfer==0.6.0
 semver==2.13.0
 setuptools
 six==1.16.0
@@ -78,11 +74,10 @@ toml==0.10.2
 tomli-w==0.4.0
 tomli==1.2.3
 tox==3.25.1
-tqdm==4.64.0
-twine==3.8.0
+twine==4.0.1
 typed-ast==1.5.4
-typing-extensions==4.1.1
+typing-extensions==4.3.0
 urllib3==1.26.12
 virtualenv==20.16.2
 webencodings==0.5.1
-zipp==3.6.0
+zipp==3.8.1
