--- a/.github/workflows/test-distribute.yml
+++ b/.github/workflows/test-distribute.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
     - name: install
-      run: make
+      run: make ci-install
     - name: test
       run: make test
   distribute:
@@ -48,7 +48,7 @@ jobs:
       with:
         python-version: '3.x'
     - name: install
-      run: make
+      run: make ci-install
     - name: distribute
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
