Work around py4j errors

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,48 @@
-apispec==5.2.2
+apispec==6.0.2
 attrs==22.1.0
-black==22.8.0
+black==22.10.0
 bleach==5.0.1
-boto3==1.24.68
-botocore==1.27.68
+boto3==1.26.24
+botocore==1.29.24
 cachetools==5.0.0
-certifi==2022.6.15
+certifi==2022.9.24
 cffi==1.15.1
 chardet==4.0.0
 click==8.1.3
 commonmark==0.9.1
-cryptography==38.0.1
-daves-dev-tools==1.39.1
+cryptography==38.0.4
+daves-dev-tools==2.0.5
 dill==0.3.2
 distlib==0.3.6
-dnslib==0.9.20
+dnslib==0.9.23
 dnspython==2.2.1
 docutils==0.19
 ecdsa==0.18.0
+exceptiongroup==1.0.4
 filelock
 flake8==5.0.4
 idna==2.10
 importlib-metadata
 iniconfig==1.1.1
-jaraco.classes==3.2.2
+jaraco.classes==3.2.3
 jmespath==1.0.1
-keyring==23.9.1
+keyring==23.9.3
 localstack-client==1.39
-localstack-ext==1.1.0
-localstack==1.1.0
+localstack-ext==1.2.0
+localstack==1.2.0
 lxml==4.9.1
 mccabe==0.7.0
-more-itertools==8.14.0
+more-itertools==9.0.0
 mypy-extensions==0.4.3
-mypy==0.971
+mypy==0.991
 packaging==21.3
-pathspec==0.10.1
-pbr==5.10.0
-pkginfo==1.8.3
+pathspec==0.10.2
+pbr==5.11.0
+pkginfo==1.9.2
 platformdirs
 pluggy==1.0.0
 plux==1.3.1
-psutil==5.9.2
+psutil==5.9.4
 py4j==0.10.9.5
 py==1.11.0
 pyaes==1.6.1
@@ -51,33 +52,32 @@ pycparser==2.21
 pyflakes==2.5.0
 Pygments==2.13.0
 pyparsing==3.0.9
-pyspark==3.3.0
-pytest==7.1.3
+pyspark==3.3.1
+pytest==7.2.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-jose==3.3.0
 PyYAML==6.0
-readme-renderer==37.1
-requests-toolbelt==0.9.1
+readme-renderer==37.3
+requests-toolbelt==0.10.1
 requests==2.25.1
 rfc3986==2.0.0
-rich==12.5.1
+rich==12.6.0
 rsa==4.9
 s3transfer==0.6.0
 semver==2.13.0
 setuptools
 six==1.16.0
-stevedore==3.5.0
-tabulate==0.8.10
+stevedore==3.5.2
+tabulate==0.9.0
 tailer==0.4.1
-toml==0.10.2
-tomli-w==0.4.0
-tomli==1.2.3
-tox==3.25.1
-twine==4.0.1
+tomli-w==1.0.0
+tomli==2.0.1
+tox==3.27.1
+twine==4.0.2
 typed-ast==1.5.4
-typing-extensions==4.3.0
-urllib3==1.26.12
+typing-extensions==4.4.0
+urllib3==1.26.13
 virtualenv==20.16.2
 webencodings==0.5.1
-zipp==3.8.1
+zipp==3.11.0
