--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,54 @@
-apispec==6.0.2
-attrs==22.1.0
-black==22.10.0
+attrs==22.2.0
+black==22.12.0
 bleach==5.0.1
-boto3==1.26.24
-botocore==1.29.24
-cachetools==5.0.0
-certifi==2022.9.24
-cffi==1.15.1
-chardet==4.0.0
+boto3==1.26.43
+botocore==1.29.43
+certifi==2022.12.7
+charset-normalizer==2.1.1
 click==8.1.3
 commonmark==0.9.1
-cryptography==38.0.4
-daves-dev-tools==2.0.5
-dill==0.3.2
+daves-dev-tools==2.0.6
 distlib==0.3.6
-dnslib==0.9.23
-dnspython==2.2.1
 docutils==0.19
-ecdsa==0.18.0
-exceptiongroup==1.0.4
+exceptiongroup==1.1.0
 filelock
 flake8==5.0.4
-idna==2.10
+idna==3.4
 importlib-metadata
 iniconfig==1.1.1
 jaraco.classes==3.2.3
 jmespath==1.0.1
 keyring==23.9.3
 localstack-client==1.39
-localstack-ext==1.2.0
-localstack==1.2.0
-lxml==4.9.1
+lxml==4.9.2
 mccabe==0.7.0
 more-itertools==9.0.0
 mypy-extensions==0.4.3
 mypy==0.991
-packaging==21.3
-pathspec==0.10.2
-pbr==5.11.0
-pkginfo==1.9.2
+packaging==22.0
+pathspec==0.10.3
+pkginfo==1.9.3
 platformdirs
 pluggy==1.0.0
-plux==1.3.1
-psutil==5.9.4
 py4j==0.10.9.5
 py==1.11.0
-pyaes==1.6.1
-pyasn1==0.4.8
 pycodestyle==2.9.1
-pycparser==2.21
 pyflakes==2.5.0
-Pygments==2.13.0
-pyparsing==3.0.9
+Pygments==2.14.0
 pyspark==3.3.1
 pytest==7.2.0
 python-dateutil==2.8.2
-python-dotenv==0.21.0
-python-jose==3.3.0
-PyYAML==6.0
 readme-renderer==37.3
 requests-toolbelt==0.10.1
-requests==2.25.1
+requests==2.28.1
 rfc3986==2.0.0
-rich==12.6.0
-rsa==4.9
+rich==13.0.0
 s3transfer==0.6.0
-semver==2.13.0
 setuptools
 six==1.16.0
-stevedore==3.5.2
-tabulate==0.9.0
-tailer==0.4.1
 tomli-w==1.0.0
 tomli==2.0.1
-tox==3.27.1
+tox==3.28.0
 twine==4.0.2
 typed-ast==1.5.4
 typing-extensions==4.4.0
