--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,34 @@
 attrs==22.2.0
-black==22.12.0
-bleach==5.0.1
-boto3==1.26.43
-botocore==1.29.43
+black==23.1.0
+bleach==6.0.0
+boto3==1.26.98
+botocore==1.29.98
 certifi==2022.12.7
-charset-normalizer==2.1.1
+charset-normalizer==3.1.0
 click==8.1.3
-commonmark==0.9.1
-daves-dev-tools==2.0.6
+daves-dev-tools==2.0.7
 distlib==0.3.6
 docutils==0.19
-exceptiongroup==1.1.0
+exceptiongroup==1.1.1
 filelock
 flake8==5.0.4
 idna==3.4
 importlib-metadata
-iniconfig==1.1.1
+iniconfig==2.0.0
 jaraco.classes==3.2.3
 jmespath==1.0.1
 keyring==23.9.3
-localstack-client==1.39
+localstack-client==2.0
 lxml==4.9.2
+markdown-it-py==2.2.0
 mccabe==0.7.0
-more-itertools==9.0.0
-mypy-extensions==0.4.3
-mypy==0.991
-packaging==22.0
-pathspec==0.10.3
-pkginfo==1.9.3
+mdurl==0.1.2
+more-itertools==9.1.0
+mypy-extensions==1.0.0
+mypy==1.1.1
+packaging==23.0
+pathspec==0.11.1
+pkginfo==1.9.6
 platformdirs
 pluggy==1.0.0
 py4j==0.10.9.5
@@ -35,14 +36,14 @@ py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 Pygments==2.14.0
-pyspark==3.3.1
-pytest==7.2.0
+pyspark==3.3.2
+pytest==7.2.2
 python-dateutil==2.8.2
 readme-renderer==37.3
 requests-toolbelt==0.10.1
-requests==2.28.1
+requests==2.28.2
 rfc3986==2.0.0
-rich==13.0.0
+rich==13.3.2
 s3transfer==0.6.0
 setuptools
 six==1.16.0
@@ -51,8 +52,8 @@ tomli==2.0.1
 tox==3.28.0
 twine==4.0.2
 typed-ast==1.5.4
-typing-extensions==4.4.0
-urllib3==1.26.13
+typing-extensions==4.5.0
+urllib3==1.26.15
 virtualenv==20.16.2
 webencodings==0.5.1
-zipp==3.11.0
+zipp==3.15.0
