--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = spark2-pytest, spark3-pytest, black, flake8, mypy
+envlist = isort, black, flake8, mypy, spark2-pytest, spark3-pytest
 
 [testenv]
 extras = all
@@ -48,3 +48,9 @@ deps =
 commands =
 	mypy --install-types --non-interactive
 	mypy
+
+[testenv:isort]
+deps =
+	isort
+commands =
+	isort -c .
