--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flake8==5.0.4
 idna==3.6
 importlib-metadata
 iniconfig==2.0.0
+isort==5.11.5
 jaraco.classes==3.2.3
 jmespath==1.0.1
 keyring==23.9.3
