--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ packages = find:
 include_package_data = True
 install_requires =
 	localstack-client~=2.5
-	lxml~=5.1
+	lxml>=5.1
 	pyspark!=2.4.7,!=2.4.8,>=2.4
 
 [options.extras_require]
