--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         os:
         - ubuntu-latest
         - windows-latest
-        - macos-latest
+        # - macos-latest
         python:
         - 3.8
         - 3.9
