--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         os:
         - ubuntu-latest
         - windows-latest
-        # - macos-latest
+        - macos-latest
         python:
         - 3.8
         - 3.9
@@ -30,6 +30,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python }}
+    - name: Install docker on macos
+      if: runner.os == 'macos'
+      run: brew install docker
     - name: install
       run: make ci-install
     - name: test
