--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,8 @@ jobs:
         brew install docker docker-compose colima && \
         mkdir -p ~/.docker/cli-plugins && \
         ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose && \
-        sudo ln -sf ~/.colima/default/docker.sock /var/run/docker.sock
+        sudo ln -sf ~/.colima/default/docker.sock /var/run/docker.sock && \
+        colima start
     - name: Install docker on windows
       if: runner.os == 'windows'
       run: choco install docker-cli
