--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ passenv =
 setenv =
 	PYTHONIOENCODING=utf-8
 	OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+	AWS_MAX_ATTEMPTS=10
+	AWS_RETRY_MODE=adaptive
 
 [testenv:spark2-pytest]
 deps =
