--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = spark2-pytest, spark3-pytest, black, flake8, mypy
+envlist = isort, black, flake8, mypy, spark2-pytest, spark3-pytest
 
 [testenv]
 extras = all
@@ -10,6 +10,7 @@ passenv =
 setenv =
 	PYTHONIOENCODING=utf-8
 	OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+	AWS_MAX_ATTEMPTS=20
 
 [testenv:spark2-pytest]
 deps =
@@ -48,3 +49,9 @@ deps =
 commands =
 	mypy --install-types --non-interactive
 	mypy
+
+[testenv:isort]
+deps =
+	isort
+commands =
+	isort -c .
