--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = localstack-s3-pyspark
-version = 0.12.0
+version = 0.12.6
 author_email = david@belais.me
 description = A CLI to configure pyspark for use with s3 on localstack
 long_description = file: README.md
@@ -9,12 +9,12 @@ license = MIT
 url = https://github.com/enorganic/localstack-s3-pyspark
 
 [options]
-python_requires = ~=3.7
+python_requires = ~=3.8
 packages = find:
 include_package_data = True
 install_requires =
-	localstack-client~=2.0
-	lxml~=4.9
+	localstack-client~=2.5
+	lxml!=5.1.0,>4.8
 	pyspark!=2.4.7,!=2.4.8,>=2.4
 
 [options.extras_require]
